testData/fixtures/lang/declare-directive.php
<?php

    declare( strict_types = 1 );
    declare( ticks=1 );
    declare(encoding='ISO-8859-1');

    <error descr="Unknown directive 'unknown'.">declare(unknown=1);</error>
